src/components/Modal/Modal.css
.inspectorModal {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  padding: 8px 16px 16px 16px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-height: 90%;
  overflow-y: scroll;
  background-color: var(--tp-base-background-color-no-opacity);
  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
  font-family: var(--tp-base-font-family, monospace);
}

.inspectorModal * {
  text-transform: none;
}

.inspectorModal__title {
  font-weight: bold;
  font-size: 18px;
  height: 24px;
  color: var(--tp-container-foreground-color);
}

/* hide scrollbar */
.inspectorModal::-webkit-scrollbar {
  display: none;
}
.inspectorModal {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.inspectorModal .formRow label {
  display: flex;
  flex-direction: column;
  margin: 8px 0px;
  font-size: 11px;
  font-weight: 500;
  align-items: flex-start;
  color: var(--tp-container-foreground-color);
}

.inspectorModal .formRow input, .inspectorModal .formRow select, .inspectorModal button {
  margin: 4px 0 0 0;
  height: 24px;
  width: 100%;
  outline: none;
  background: var(--tp-input-background-color);
  border: none;
  color: var(--tp-container-foreground-color);
  cursor: pointer;
}

.inspectorModal button {
  background: var(--tp-container-foreground-color);
  color: black;
}

.inspectorModal .formRow input[type=checkbox] {
  width: 24px;
  height: 24px;
}

